<resources>
    <string name="app_name">Etech Mobile</string>
    <string name="title_activity_login">Etech - Login</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Não é um login válido!</string>
    <string name="invalid_password">Senha deve conter pelo menos 8 caracteres!</string>
    <string name="login_failed">Login falhou</string>
    <string name="description_logo">Headset utilizado para logotipo da marca</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="login_prefs_key">loginPrefs</string>
    <string name="id_usuario_key">idUsuario</string>
    <string name="login_usuario_key">loginUsuario</string>
    <string name="senha_usuario_key">senhaUsuario</string>
    <string name="login">LOGIN</string>
    <string name="header_text">E-TECH\nA sua loja de Acessórios Eletônicos</string>
    <string name="criar_conta">CRIAR CONTA</string>
    <string name="ja_tem_conta">JÁ TEM UMA CONTA?\nCLIQUE AQUI</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="cpf">CPF</string>
    <string name="cpf_error">O CPF deve conter 11 dígitos!</string>
    <string name="name_error">O nome precisa ser inserido!</string>
    <string name="different_passwords">As senhas precisam ser iguais!</string>
    <string name="cadastro_failed">O cadastro falhou!</string>
    <string name="titulo_produtos">Produtos</string>
    <string name="titulo_carrinho">Carrinho</string>
    <string name="titulo_cliente">Minha conta</string>
    <string-array name="listaEnderecos">
        <item>Casa 1</item>
        <item>Casa 2</item>
        <item>Trabalho 1</item>
    </string-array>
</resources>