<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cadastro.CadastroActivity">

    <View
        android:id="@+id/header"
        style="@style/Header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/header_text"
        style="@style/Header_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/header"
        app:layout_constraintBottom_toBottomOf="@+id/header"
        android:gravity="center_horizontal|center_vertical"
        />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="170dp"
        android:layout_height="0dp"
        android:contentDescription="@string/description_logo"
        android:elevation="30dp"
        android:src="@drawable/logo"
        app:civ_border_color="@color/white"
        app:civ_border_overlay="true"
        app:layout_constraintBottom_toTopOf="@+id/containerComponents"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <View
        android:id="@+id/containerComponents"
        style="@style/ContainerComponents"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <EditText
        android:id="@+id/edit_usuario"
        style="@style/EditText"
        android:hint="@string/usuario"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintTop_toTopOf="@id/containerComponents"
        tools:ignore="TextContrastCheck"
        android:inputType="text"
        android:autofillHints="username" />

    <EditText
        android:id="@+id/edit_nome"
        style="@style/EditText"
        android:hint="@string/nome_completo"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintTop_toBottomOf="@id/edit_usuario"
        tools:ignore="TextContrastCheck"
        android:inputType="text"
        android:autofillHints="name" />

    <EditText
        android:id="@+id/edit_cpf"
        style="@style/EditText"
        android:hint="@string/cpf"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintTop_toBottomOf="@id/edit_nome"
        tools:ignore="TextContrastCheck"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/edit_senha"
        style="@style/EditText"
        android:autofillHints="password"
        android:hint="@string/senha"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintTop_toBottomOf="@id/edit_cpf"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/edit_repitasenha"
        style="@style/EditText"
        android:autofillHints="password"
        android:hint="Repita sua senha"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintTop_toBottomOf="@id/edit_senha"
        tools:ignore="TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_cadastro"
        style="@style/Button_main"
        android:text="@string/criar_conta"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bt_cadastroaux" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_cadastroaux"
        style="@style/Button_aux"
        android:text="@string/ja_tem_conta"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/containerComponents"/>


</androidx.constraintlayout.widget.ConstraintLayout>